<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.widget.CompoundButton"/>

        <variable
            name="taskDetailsViewModel"
            type="com.ang.acb.todolearn.ui.details.TaskDetailsViewModel" />
        <variable
            name="task"
            type="com.ang.acb.todolearn.data.local.Task" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.TaskDetailsFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_normal">

                <CheckBox
                    android:id="@+id/task_details_completed_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_mini"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:checked="@{task.completed}"
                    android:onClick="@{(view) -> taskDetailsViewModel.completeTask(task, ((CompoundButton) view).isChecked())}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:checked="true"/>

                <TextView
                    android:id="@+id/task_details_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@{task.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/task_details_completed_checkbox"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/task_details_description_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:padding="@dimen/padding_small"
                    android:text="@{task.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintTop_toBottomOf="@id/task_details_title_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/task_details_title_tv"
                    app:layout_constraintEnd_toEndOf="@+id/task_details_title_tv"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_task"
            android:onClick="@{() -> taskDetailsViewModel.editTaskEvent(task.id)}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>