<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tasksViewModel"
            type="com.ang.acb.todolearn.ui.list.TasksViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/tasks_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.list.TasksFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/no_tasks_yet"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:visibleGone="@{tasksViewModel.empty}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_task"
                app:visibleGone="@{!tasksViewModel.empty}"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_new_task"
            android:onClick="@{() -> tasksViewModel.addNewTaskEvent()}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>