<resources>
    <string name="app_name">To Do</string>
    <string name="add_new_task">Add new task</string>
    <string name="tasks">Tasks</string>
    <string name="new_task">New Task</string>
    <string name="save_task">Save task</string>
    <string name="edit_task">Edit task</string>
    <string name="no_tasks_yet">You have no tasks yet</string>

    <!-- EditText hints-->
    <string name="title_hint">Task title</string>
    <string name="deadline_hint">Set task deadline</string>
    <string name="description_hint">Enter your task here</string>

    <!-- User messages shown via Snackbar -->
    <string name="error_loading_task_message">Could not load task data</string>
    <string name="error_loading_tasks_message">Could not load tasks</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="saved_task_message">Task saved</string>
    <string name="deleted_task_message">Task deleted</string>
    <string name="task_marked_completed_message">Task marked as completed</string>
    <string name="task_marked_active_message">Task marked as active</string>
    <string name="tasks_cleared_message">All tasks cleared</string>
    <string name="completed_tasks_cleared_message">Completed tasks cleared</string>

    <!-- Menu items titles-->
    <string name="show_all_tasks">Show All Tasks</string>
    <string name="show_completed_tasks">Show Completed</string>
    <string name="show_active_tasks">Show Active</string>
    <string name="clear_all_tasks">Clear All Tasks</string>
    <string name="clear_completed_tasks">Clear Completed</string>
    <string name="delete_task">Delete Task</string>
    <string name="settings">Settings</string>

    <!-- Tasks filter types values -->
    <string name="all_tasks">All tasks</string>
    <string name="active_tasks">Active tasks</string>
    <string name="completed_tasks">Completed Tasks</string>

    <!-- Preferences screen-->
    <string name="notifications_pref_header">Notifications</string>
    <string name="notifications_pref_key" translatable="false">notifications_pref_key</string>
    <string name="notifications_pref_title">Enable message notifications</string>
    <string name="notifications_pref_summary">Reminder for tasks deadlines</string>
    <string name="theme_pref_header">Theme</string>
    <string name="theme_pref_key" translatable="false">theme_pref_key</string>
    <string name="theme_pref_title">Night mode</string>
    <string name="theme_pref_summary">Select a dark or light theme.</string>
    <string name="theme_pref_dialog_msg">Set Night mode</string>
    <string name="theme_pref_entry_night_auto" translatable="false">auto</string>
    <string name="theme_pref_entry_night_on" translatable="false">on</string>
    <string name="theme_pref_entry_night_off" translatable="false">off</string>
    <string name="theme_pref_value_night_auto">Automatic</string>
    <string name="theme_pref_value_night_on">Night mode</string>
    <string name="theme_pref_value_night_off">Day mode</string>

    <!-- Notifications -->
    <string name="task_notification_title">Your TODOs</string>
    <string name="task_notification_message">"Time to evaluate your priorities today. "</string>
    <string name="task_notification_channel_id" translatable="false">task_notification_channel_id</string>
    <string name="task_notification_channel_name">Tasks</string>
    <string name="task_notification_channel_description">Tasks Reminder</string>

    <!--Statistics screen -->
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>

    <!-- Alert dialog-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task_confirmation_message">Are you sure you want to delete this task?</string>

    <!-- Content descriptions -->
    <string name="navigation_view_header_title">Tasks</string>
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="pie_chart">Pie Chart</string>

    <string name="deadline_title">Deadline %1$s</string>
</resources>
