<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addEditTasksViewModel"
            type="com.ang.acb.todolearn.ui.details.AddEditTaskViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.AddEditTaskFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/padding_normal">

                <TextView
                    android:id="@+id/add_task_deadline"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:hint="@string/deadline_hint"
                    android:textColorHint="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="true"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@{addEditTasksViewModel.deadlineText}"
                    android:drawableEnd="@drawable/ic_access_time"
                    android:drawablePadding="@dimen/padding_mini"
                    android:drawableTint="@color/colorAccent"
                    android:onClick="@{() -> addEditTasksViewModel.addTaskDeadlineEvent()}"/>

                <EditText
                    android:id="@+id/add_task_title_edit_text"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:hint="@string/title_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage"
                    android:maxLines="1"
                    android:text="@={addEditTasksViewModel.title}"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <EditText
                    android:id="@+id/add_task_description_edit_text"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="@dimen/padding_small"
                    android:gravity="top"
                    android:hint="@string/description_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textLongMessage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@={addEditTasksViewModel.description}" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_done"
            android:contentDescription="@string/save_task"
            android:onClick="@{() -> addEditTasksViewModel.saveTask()}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>